--- a/04-Working-with-Unix.Rmd
+++ b/04-Working-with-Unix.Rmd
@@ -437,7 +437,7 @@ egrep "i.g" states.txt
 The regular expression "i.g" matches the sub-string "irg" in V*irg*inia, and
 West V*irg*inia, and it matches the sub-string "ing" in Wash*ing*ton and
 Wyom*ing*. The period metacharacter is a stand-in for the "r" in "irg" and the
-"n" in "ing" in the example above. The period metacharacter is extremely liberal,
+"n" in "ing" in the example above. The period metacharacter is extremely liberal;
 for example the command `egrep "." states.txt` would return every line of
 states.txt since the regular expression `"."` would match one occurrence of any
 character on every line (there's at least one character on every line). 
@@ -603,7 +603,7 @@ egrep "\s" small.txt
 ```
 
 As you can see in the example above, the `\w` metacharacter matches all letters,
-numbers, and even the underscore character (`_`). We can see the compliment of
+numbers, and even the underscore character (`_`). We can see the complement of
 this grep by adding the `-v` flag to the command:
 
 ```{r, engine='bash', eval=FALSE}
@@ -638,7 +638,7 @@ In addition to general character sets we can also create specific character
 sets using square brackets (`[ ]`) and then including the characters we wish to
 match in the square brackets. For example the regular expression for the set
 of vowels is `[aeiou]`. You can also create a regular expression for the
-compliment of a set by including a caret (`^`) in the beginning of a set. For
+complement of a set by including a caret (`^`) in the beginning of a set. For
 example the regular expression `[^aeiou]` matches all characters that are not
 vowels. Let's test both on small.txt:
 
@@ -886,8 +886,8 @@ a table with several of the metacharacters we've discussed in this chapter:
 |       ?       |       Zero or One of Previous        |
 |    &#124;     | Either the Previous or the Following |
 |      {6}      |        Exactly 6 of Previous         |
-|    {4, 6}     |     Between 4 and 6 or Previous      |
-|     {4, }     |       More than 4 of Previous        |
+|    {4, 6}     |     Between 4 and 6 of Previous      |
+|     {4, }     |        4 or more of Previous         |
 
 If you want to experiment with writing regular expressions before you use them
 I highly recommend playing around with http://regexr.com/.
@@ -1031,7 +1031,7 @@ alias edbp='nano ~/.bash_profile'
 
 The first `alias` creates a new command `docs`. Now entering `docs` into the
 command line is the equivalent of entering `cd ~/Documents` into the comamnd
-line. Open let's edit our `~/.bash_profile` with `nano`. If there's anything
+line. Let's edit our `~/.bash_profile` with `nano`. If there's anything
 in your `~/.bash_profile` already then start adding lines at the end of the
 file. Add the line `alias docs='cd ~/Documents'`, then save the file and quit
 `nano`. In order to make the changes to our `~/.bash_profile` take effect we
@@ -1236,7 +1236,7 @@ British Columbia
 Notice that this is the same result we would get from `head -n 5 canada.txt`,
 we just used `cat` to illustrate how the pipe works. The general syntax of the
 pipe is 
-`[program that produces output] | [program uses pipe output as input instead of a file]`.
+`[program that produces output] | [program that uses pipe output as input instead of a file]`.
 
 A more common and useful example where we could use the pipe is answering the
 question: "How many US states end in a vowel?" We could use `grep` and regular
@@ -1254,7 +1254,7 @@ grep "[aeiou]$" states.txt | wc -l
 The pipe can also be used multiple times in one command in order to take
 the output from one piped command and use it as the input to yet another program!
 For example we could use three pipes with `ls`, `grep`, and `less` so that we
-could scroll through the files in out current directory were created in February:
+could scroll through the files in our current directory that were created in February:
 
 ```{r, engine='bash', eval=FALSE}
 ls -al | grep "Feb" | less
@@ -1311,7 +1311,7 @@ draft_journal_entry.txt:
   touch draft_journal_entry.txt
 ```
 
-The simple `makefile` above shows illustrates a **rule** which has the
+The simple `makefile` above illustrates a **rule** which has the
 following general format:
 
 ```
@@ -1319,7 +1319,7 @@ following general format:
   [commands...]
 ```
 
-In the simple example we created `draft_journal_entry.txt` is the **target**, a
+In the simple example we created, `draft_journal_entry.txt` is the **target**, a
 file which is created as the result of the **command(s)**. It's very important
 to note that any commands under a target **must be indented with a `Tab`**. If
 we don't use `Tab`s to indent the commands then `make` will fail.
@@ -1506,7 +1506,7 @@ clean:
   rm readme.txt
 ```
 
-Let's save and close our `makefile` then let's test it out first let's clean up
+Let's save and close our `makefile` then let's test it out.  First let's clean up
 our repository:
 
 ```{r, engine='bash', eval=FALSE}
