--- a/05-Bash-Programming.Rmd
+++ b/05-Bash-Programming.Rmd
@@ -10,8 +10,8 @@ you've already learned. By the end of this chapter you should be able to write
 your own command line tools!
 
 You can use `nano` to write all of the programs we're going to discuss in this
-chapter, however I recommend using the [Atom](https://atom.io/) text editor
-because it's more user friendly.
+chapter; however I recommend using the [Atom](https://atom.io/) text editor
+because it's more user-friendly.
 
 Now let's create a new file called `math.sh` in the `~/Code/` directory
 and let's open that file with either `nano` or Atom.
@@ -602,7 +602,7 @@ cd ~/Code
 
 As you can see the file `math.sh` exists! Most of the time when you're writing
 bash scripts you won't be comparing two raw values or trying to find something
-out about one raw value, instead you'll want to create a logical statement
+out about one raw value; instead you'll want to create a logical statement
 about a value contained in a variable. Variables behave just like raw values in
 logical expressions. Let's take a look at a few examples:
 
@@ -825,7 +825,7 @@ bash simpleelif.sh 5
 ## 5 is a great number
 ```
 
-If first condition is false since 5 is not equal to 4, but then the next
+The first condition is false since 5 is not equal to 4, but then the next
 condition in the ELIF statement is true since 5 is greater than 3, so that
 echo command is executed and the rest of the statement is skipped. Try to guess
 what will happen if we use `2` as an argument:
@@ -934,7 +934,7 @@ expressions, and IF statements allow you to write more powerful Bash programs.
 - Conditional execution uses two operators: AND (`&&`) and OR (`||`) which you
 can use to control what command get executed based on their exit status.
 - Conditional expressions are always in double brackets (`[[ ]]`). They have
-exit an exit status of 0 if they contain a true assertion or 1 if they contain
+an exit status of 0 if they contain a true assertion or 1 if they contain
 a false assertion.
 - IF statements evaluate conditional expressions. If an expression is true then
 the code within an IF statement is executed, otherwise it is skipped.
@@ -1345,7 +1345,7 @@ done
 ```
 
 If the program is working, then `count` is being incremented very rapidly and
-you're watching number wiz by in your terminal! Don't fret, you can terminate
+you're watching numbers whiz by in your terminal! Don't fret, you can terminate
 any program that's stuck in an infinite loop using `Control` + `C`. Use
 `Control` + `C` to get the prompt back so that we can continue.
 
