--- a/06-Git-and-GitHub.Rmd
+++ b/06-Git-and-GitHub.Rmd
@@ -1435,7 +1435,7 @@ click near the top left corner of this page on the **<> Code** tab, and you
 should see that the changes from the `update-readme` branch have been merged
 into `master`.
 
-When working on a remote GitHub repository with many other folks these pull
+When working on a remote GitHub repository with many other folks, these pull
 requests and merges can happen without you being involved at all if the commits
 affect parts of the code that you're not working on. Still it's important to
 keep your local repository up to date with the latest changes in the remote
