--- a/02-Getting-Unix.Rmd
+++ b/02-Getting-Unix.Rmd
@@ -2,19 +2,19 @@
 
 > An indispensable thing never has much value. - Russian proverb
 
-## Mac & Ubuntu Users
+## MacOS & Ubuntu Users
 
-If you're using a Mac or you're using the Ubuntu operating system find a
-program called **Terminal** and open it. You can skip the next section about
+If you're using MacOS or the Ubuntu operating system there is a default
+program called **Terminal** find it and open it. You can skip the next section about
 Windows.
 
 ## Windows
 
-If you're using the latest version of Windows 10 you should enable and install
+If you're using the latest version of Windows (Windows 10) you should install and enable
 Bash on Ubuntu on Windows. You can find the installation guide from Microsoft
 [here](https://msdn.microsoft.com/en-us/commandline/wsl/install_guide).
 
-If you don't have the latest version of Windows 10 you should download 
+If you don't have the latest version of Windows you should download 
 [VirtualBox](https://www.virtualbox.org/) and then set up the latest version of
 Ubuntu with VirtualBox. Instructions for doing this tend to change slightly
 over time, so I suggest using Google to search for "how to install Ubuntu on
