--- a/03-Command-Line-Basics.Rmd
+++ b/03-Command-Line-Basics.Rmd
@@ -308,8 +308,8 @@ ls
 ## todo.txt
 ```
 
-I want to create a new directory to store some code files I am going to write
-later, so I will use `mkdir` to create a new directory called `Code`:
+Let's create a new directory to store some code files we am going to write
+later. We can use `mkdir` to create a new directory called `Code`:
 
 ```{r, engine='bash', eval=FALSE}
 mkdir Code
@@ -325,15 +325,15 @@ ls
 ## Code
 ```
 
-It worked! Notice that the argument `Code` to `mkdir` is a relative path, 
-however I could have specified an absolute path. In general you should
+It worked! Notice that the argument `Code` to the command `mkdir` is a relative 
+path, however we could have specified an absolute path. In general you should
 expect Unix tools that take paths as arguments to accept both relative and
 absolute paths.
 
 There are a few different ways to create a new file on the command line. The
 most simple way to create a blank file is to use the `touch` command, followed
-by the path to the file you want to create. In this example I'm going to create
-a new journal entry using touch:
+by the path to the file you want to create. In this example we are going to create
+a new journal entry using `touch`:
 
 ```{r, engine='bash', eval=FALSE}
 touch journal-2017-01-24.txt
@@ -350,8 +350,8 @@ ls
 ## journal-2017-01-24.txt
 ```
 
-A new file has been created! I've been using `ls` to list the files and folders
-in the current directory, but using `ls` alone doesn't differentiate between
+A new file has been created! We have been using `ls` to list the files and folders
+in the current directory, but using `ls` alone does not differentiate between
 which of the listed items are folders and which are files. Thankfully you can
 use the `-l` option with `ls` in order to get a **l**ong listing of files in
 a directory.
@@ -376,12 +376,12 @@ otherwise the information in the row corresponds to a file. As you can see in my
 home directory there are five directories and two files. The string of
 characters following the `d` in the case of a directory or following the first
 `-` in the case of a file represent the permissions for that file or directory.
-We'll cover permissions in a later section. The columns of this table also show
-who created the file, the group that the creator of the file belongs to (we'll
+We will cover permissions in a later section. The columns of this table also show
+who created the file, the group that the creator of the file belongs to (we will
 cover groups later when we cover permissions), the size of the file, the time
 and date when the file was last modified, and then finally the name of the file.
 
-Now that we've created a file there are a few different ways that we can inspect
+Now that we have created a file there are a few different ways that we can inspect
 and edit this file. First let's use the `wc` command to view the **w**ord
 **c**ount and other information about the file:
 
@@ -408,7 +408,7 @@ cat todo.txt
 ```
 
 The `cat` command is often used to print text files to the terminal, despite
-the fact that it's really meant to con**cat**enate files. You can see this
+the fact that it is really meant to con**cat**enate files. You can see this
 concatenation in action in the following example:
 
 ```{r, engine='bash', eval=FALSE}
@@ -426,7 +426,7 @@ cat todo.txt todo.txt
 
 The `cat` command will combine every text file that is provided as an argument.
 
-Let's take a look at how we could view a larger file. There's a file inside
+Let's take a look at how we could view a larger file. There is a file inside
 the Documents directory:
 
 ```{r, engine='bash', eval=FALSE}
@@ -437,7 +437,7 @@ ls Documents
 ## a-tale-of-two-cities.txt
 ```
 
-Let's examine this file to see if it's reasonable to read it with `cat`:
+Let's examine this file to see if it is reasonable to read it with `cat`:
 
 ```{r, engine='bash', eval=FALSE}
 wc Documents/a-tale-of-two-cities.txt
@@ -447,7 +447,7 @@ wc Documents/a-tale-of-two-cities.txt
 ##      17    1005    5799 Documents/a-tale-of-two-cities.txt
 ```
 
-Wow, over 1000 words! If we use `cat` on this file it's liable to take up our
+Wow, over 1000 words! If we use `cat` on this file it is liable to take up our
 entire terminal. Instead of using `cat` for this large file we should use
 `less`, which is a program designed for viewing multi-page files. Let's try
 using `less`:
@@ -479,8 +479,8 @@ next page and the `b` key to go to the previous page. In order to quit `less`
 and go back to the prompt press the `q` key.
 
 As you can see the `less` program is a kind of Unix tool with behavior that we
-haven't seen before because it "takes over" your terminal. There are a few
-programs like this that we'll discuss throughout this book.
+have not seen before because it "takes over" your terminal. There are a few
+programs like this that we will discuss throughout this book.
 
 There are also two easy to remember programs for glimpsing the beginning or end
 of a text file: `head` and `tail`. Let's quickly use `head` and `tail` on
@@ -505,7 +505,7 @@ head Documents/a-tale-of-two-cities.txt
 
 As you can see `head` prints the first ten lines of the file to the terminal.
 You can specify the number of lines printed with the `-n` option followed by
-the number of lines you'd like to see:
+the number of lines you would like to see:
 
 ```{r, engine='bash', eval=FALSE}
 head -n 4 Documents/a-tale-of-two-cities.txt
@@ -537,7 +537,7 @@ of small creatures—the creatures of this chronicle among the rest—along the
 roads that lay before them.
 ```
 
-We've now gone over a few tools for inspecting files, folders, and their
+We have now gone over a few tools for inspecting files, folders, and their
 contents including `ls`, `wc`, `cat`, `less`, `head`, and `tail`. Before the 
 end of this section
 we should discuss a few more techniques for creating and also editing files. One
@@ -585,7 +585,7 @@ cat echo-out.txt
 ## I'm in the file.
 ```
 
-Looks like it worked! You can also **append** text to the end of a file using
+It worked! You can also **append** text to the end of a file using
 two greater-than signs (`>>`). Let's try this feature out:
 
 ```{r, engine='bash', eval=FALSE}
@@ -612,8 +612,8 @@ cat echo-out.txt
 ## A third line.
 ```
 
-Unfortunately I have unintentionally overwritten what was already contained in
-`echo-out.txt`. There's no undo button in Unix so I'll have to live with this
+Unfortunately we have unintentionally overwritten what was already contained in
+`echo-out.txt`. There is no undo button in Unix so we will have to live with this
 mistake. This is the first of several lessons demonstrating the damage that you
 should try to avoid inflicting with Unix. Make sure to take extra care when
 executing commands that can modify or delete a file, a typo in the command can
@@ -626,7 +626,7 @@ Finally we should discuss how to edit text files. There are several file editors
 that are available for your terminal including 
 [`vim`](https://en.wikipedia.org/wiki/Vim_(text_editor)) 
 and [`emacs`](https://en.wikipedia.org/wiki/Emacs). Entire books have been
-written about how to use both of these text editors, and if you're interested
+written about how to use both of these text editors, and if you are interested
 in one of them you should look for resources online about how to use them. The
 one text editor we will discuss using is called `nano`. Just like `less`, `nano`
 uses your entire terminal window. Let's edit `todo.txt` using `nano`:
@@ -648,17 +648,17 @@ nano todo.txt
 ^X Exit       ^J Justify    ^W Where Is   ^V Next Page  ^U UnCut Text ^T To Spell
 ```
 
-Once you've started `nano` you can start editing the text file. The top line of
-the `nano` editor shows the file you're currently working on, and the bottom two
+Once you have started `nano` you can start editing the text file. The top line of
+the `nano` editor shows the file you are currently working on, and the bottom two
 lines show a few commands that you can use in `nano`. The caret character (`^`)
 represents the `Control` key on your keyboard, so you can for example type
-`Control` + `O` in order to save the changes you've made to the text file, or
+`Control` + `O` in order to save the changes you have made to the text file, or
 `Control` + `X` in order to exit `nano` and go back to the prompt. 
 
 `nano` is a good editor for beginners because it works similarly to word 
-processors you've used before. You can use the arrow keys in order to move your
+processors you have used before. You can use the arrow keys in order to move your
 cursor around the file, and the rest of the keys on your keyboard work as
-expected. Let's add an item to my to-do list and then I'll save and exit `nano`
+expected. Let's add an item to the to-do list and then we will save and exit `nano`
 by typing `Control` + `O` followed by `Control` + `X`.
 
 ```
@@ -718,7 +718,7 @@ printing it to the command line.
 
 ## Migration and Destruction
 
-In this section we'll discuss moving, renaming, copying, and deleting files and
+In this section we will discuss moving, renaming, copying, and deleting files and
 folders. First let's revisit the contents of our current working directory:
 
 ```{r, engine='bash', eval=FALSE}
@@ -736,15 +736,15 @@ journal-2017-01-24.txt
 todo.txt
 ```
 
-It's gotten a little sloppy, so let's clean this directory up. First I want to
-make a new directory to store all of my journal entries in called `Journal`. We
+It's gotten a little sloppy, so let's clean this directory up. First we will
+make a new directory to store all of the journal entries in called `Journal`. We
 already know how to do that:
 
 ```{r, engine='bash', eval=FALSE}
 mkdir Journal
 ```
 
-Now I want to move my journal entry `journal-2017-01-24.txt` into the `Journal`
+Now we want to move the journal entry `journal-2017-01-24.txt` into the `Journal`
 directory. We can **m**o**v**e it using the `mv` command. `mv` takes two
 arguments: first the path to the file or folder that you wish to move followed
 by the destination folder. Let's try using `mv` now:
@@ -765,7 +765,7 @@ echo-out.txt
 todo.txt
 ```
 
-Looks like it worked! I just realized however that I want to move the `Journal`
+Looks like it worked! I just realized however that we should move the `Journal`
 directory into the `Documents` folder. Thankfully we can do this with `mv` in
 the same way:
 
@@ -861,8 +861,8 @@ echo-out.txt
 ```
 
 Finally, let's discuss how to delete files and folders with the command line.
-**A word of extreme caution:** in general I don't recommend deleting files or
-folders on the command line because as we've discussed before there is 
+**A word of extreme caution:** in general I do not recommend deleting files or
+folders on the command line because as we have discussed before there is 
 ***no undo button*** on the command line. If you delete a file that is critical
 to your computer functioning you may cause irreparable damage. I *highly* 
 recommend moving files or folders to a designated trash folder and then deleting
@@ -870,12 +870,12 @@ them the way you would normally delete files and folders outside of the command
 line (The path to the Trash Bin is `~/.Trash` on Mac and `~/.local/share/Trash`
 on Ubuntu). If you decide to delete 
 a file or folder on your computer make absolutely
-sure that the command you've typed is correct before you press `Enter`. If you do
+sure that the command you have typed is correct before you press `Enter`. If you do
 delete a file or folder by accident stop using your computer immediately and
 consult with a computer professional or your IT department so they can try to
 recover the file.
 
-Now that you've been warned, let's discuss `rm`, the
+Now that you have been warned, let's discuss `rm`, the
 [Avada Kedavra](https://en.wikipedia.org/wiki/Magic_in_Harry_Potter#Unforgivable_Curses)
 of command line programs. When **r**e**m**oving files `rm` only requires the path to a
 file in order to delete it. Let's test its destructive power on `echo-out.txt`:
@@ -919,7 +919,7 @@ ls Desktop
 echo-out.txt
 ```
 
-Now that the awesome destructive power of `rm` is on your side, you've learned
+Now that the awesome destructive power of `rm` is on your side, you have learned
 the basics of the command line! See you in the next chapter for a discussion of
 more advanced command line topics.
 
