--- a/05-Bash-Programming.Rmd
+++ b/05-Bash-Programming.Rmd
@@ -347,7 +347,7 @@ If you're making Bash programs for you or for others to use one way you can get
 user input is to specify arguments for users to provide to your program, as we
 discussed in the previous section. You could also ask users to type in a string
 on the command line by temporarily stopping the execution of your program using
-the `read` command. Let's a write a small script where you can see how the read
+the `read` command. Let's write a small script where you can see how the read
 command works:
 
 ```
