--- a/06-Git-and-GitHub.Rmd
+++ b/06-Git-and-GitHub.Rmd
@@ -1111,7 +1111,9 @@ on GitHub with a local repository is a little different from future Git pushes.
 We'll need to use the `-u` flag in order to set `origin` as the default remote
 repository so we don't have to provide its name every time we want to interact
 with it. Enter the following command, modified so that you're using your GitHub
-user name:
+user name. (Note: If you have two-factor authentication enabled in your GitHub account, 
+you will need to create a (personal access token)[https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line] 
+to use at the password prompt.)
 
 ```{r, engine='bash', eval=FALSE}
 git push -u origin master
