--- a/index.Rmd
+++ b/index.Rmd
@@ -66,11 +66,11 @@ spring to harvest by autumn. Software is not produced in factories on an
 assembly line. Software is a hand-made, often bespoke good. If a software
 developer is an artisan, then Unix is their workbench. Unix provides an
 essential and simple set of tools in a distraction-free environment. Even if
-you are not a software developer learning Unix can open you up to new methods
+you are not a software developer, learning Unix can open you up to new methods
 of thinking and novel ways to scale your ideas. My goal
 for this book is to help you get started with Unix by writing the book I would
 have wanted when I was first learning Unix. If you have any additions,
-corrections, or comments for this book please open an issue or send a pull
+corrections, or comments for this book, please open an issue or send a pull
 request to: https://github.com/seankross/the-unix-workbench. If you are unsure
-what a pull request is don't worry, you will find out in the Git and GitHub
+what a pull request is, don't worry; you will find out in the Git and GitHub
 chapter of this book!
