--- a/index.Rmd
+++ b/index.Rmd
@@ -44,23 +44,23 @@ Also thank you to Jon Calder and Elissa Redmiles for your edits and suggestions.
 
 # Introduction {-}
 
-This book is intended for folks who are new to programming and new to Unix-like
+This book is intended for folks who are new to programming and to Unix-like
 operating systems like macOS and Linux distributions like Ubuntu. Most of the
 technologies discussed in this book will be accessed via a command line
-interface. Command line 
-interfaces can seem alien at first, so this book
+interface. Command line interfaces can seem alien at first, so this book
 attempts to draw parallels between using the command line and actions that you
 would normally take while using your mouse and keyboard.
 You will also learn how to write little pieces of software in a programming
 language called Bash, which allows you to connect together the tools we will
-discuss. My hope is that by the end of this book you be able to use different
-Unix tools as if they are interconnecting Lego bricks.
+discuss. My hope is that, by the end of this book, you will be able to use 
+different Unix tools as if they are interconnecting Lego bricks.
 
-Unix forms a foundation that is often very helpful for
-accomplishing other goals you might have for you and your computer, whether
-that goal is running a business, writing a book, curing disease, or creating
-the next great app. The means to these goals are sometimes carried out by
-writing software.
+Unix is over 40 years old, yet it is still used to power your phone,
+the Internet, and the latest scientific research. It forms a foundation 
+that is often very helpful for accomplishing other goals you might have for you
+and your computer, whether that goal is running a business, writing a book, 
+curing disease, or creating the next great app. The means to these goals are 
+sometimes carried out by writing software.
 Software cannot be mined out of the ground, nor can software seeds be planted in
 spring to harvest by autumn. Software is not produced in factories on an
 assembly line. Software is a hand-made, often bespoke good. If a software
